deepwoods orcs ideas

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -5237,3 +5237,453 @@
  Z51_idea_6_3_desc:0 "Khozrugan 6 desc"
  Z51_idea_7_3:0 "Tighten the Yoke"
  Z51_idea_7_3_desc:0 "Khozrugan 7 desc"
+
+ I40_ideas_1:0 "Cursed Howl Ideas 1"
+ I40_ideas_1_start:0 "Cursed Howl Traditions 1"
+ I40_ideas_1_bonus:0 "Cursed Howl Ambition 1"
+ I40_idea_1_1:0 "Gordak's Challenge"
+ I40_idea_1_1_desc:0 "Cursed Howl 1 desc"
+ I40_idea_2_1:0 "Orcish Nation-Building"
+ I40_idea_2_1_desc:0 "Cursed Howl 2 desc"
+ I40_idea_3_1:0 "Only The Strong Survive"
+ I40_idea_3_1_desc:0 "Cursed Howl 3 desc"
+ I40_idea_4_1:0 "The Endless Greentide"
+ I40_idea_4_1_desc:0 "Cursed Howl 4 desc"
+ I40_idea_5_1:0 "Taming The Forest"
+ I40_idea_5_1_desc:0 "Cursed Howl 5 desc"
+ I40_idea_6_1:0 "Vice Grip Administration"
+ I40_idea_6_1_desc:0 "Cursed Howl 6 desc"
+ I40_idea_7_1:0 "Victory in the Woods"
+ I40_idea_7_1_desc:0 "Cursed Howl 7 desc"
+
+ I40_ideas_2:0 "Cursed Howl Ideas 2"
+ I40_ideas_2_start:0 "Cursed Howl Traditions 2"
+ I40_ideas_2_bonus:0 "Cursed Howl Ambition 2"
+ I40_idea_1_2:0 "Gordak's Challenge"
+ I40_idea_1_2_desc:0 "Cursed Howl 1 desc"
+ I40_idea_2_2:0 "Orcish Nation-Building"
+ I40_idea_2_2_desc:0 "Cursed Howl 2 desc"
+ I40_idea_3_2:0 "Only The Strong Survive"
+ I40_idea_3_2_desc:0 "Cursed Howl 3 desc"
+ I40_idea_4_2:0 "The Endless Greentide"
+ I40_idea_4_2_desc:0 "Cursed Howl 4 desc"
+ I40_idea_5_2:0 "Taming The Forest"
+ I40_idea_5_2_desc:0 "Cursed Howl 5 desc"
+ I40_idea_6_2:0 "Vice Grip Administration"
+ I40_idea_6_2_desc:0 "Cursed Howl 6 desc"
+ I40_idea_7_2:0 "Victory in the Woods"
+ I40_idea_7_2_desc:0 "Cursed Howl 7 desc"
+
+ I40_ideas_3:0 "Cursed Howl Ideas 3"
+ I40_ideas_3_start:0 "Cursed Howl Traditions 3"
+ I40_ideas_3_bonus:0 "Cursed Howl Ambition 3"
+ I40_idea_1_3:0 "Gordak's Challenge"
+ I40_idea_1_3_desc:0 "Cursed Howl 1 desc"
+ I40_idea_2_3:0 "Orcish Nation-Building"
+ I40_idea_2_3_desc:0 "Cursed Howl 2 desc"
+ I40_idea_3_3:0 "Only The Strong Survive"
+ I40_idea_3_3_desc:0 "Cursed Howl 3 desc"
+ I40_idea_4_3:0 "The Endless Greentide"
+ I40_idea_4_3_desc:0 "Cursed Howl 4 desc"
+ I40_idea_5_3:0 "Taming The Forest"
+ I40_idea_5_3_desc:0 "Cursed Howl 5 desc"
+ I40_idea_6_3:0 "Vice Grip Administration"
+ I40_idea_6_3_desc:0 "Cursed Howl 6 desc"
+ I40_idea_7_3:0 "Victory in the Woods"
+ I40_idea_7_3_desc:0 "Cursed Howl 7 desc"
+
+ I41_ideas_1:0 "Sapchopper Ideas 1"
+ I41_ideas_1_start:0 "Sapchopper Traditions 1"
+ I41_ideas_1_bonus:0 "Sapchopper Ambition 1"
+ I41_idea_1_1:0 "Rule with Fear"
+ I41_idea_1_1_desc:0 "Sapchopper 1 desc"
+ I41_idea_2_1:0 "Orcish Nation-Building"
+ I41_idea_2_1_desc:0 "Sapchopper 2 desc"
+ I41_idea_3_1:0 "Only The Strong Survive"
+ I41_idea_3_1_desc:0 "Sapchopper 3 desc"
+ I41_idea_4_1:0 "The Endless Greentide"
+ I41_idea_4_1_desc:0 "Sapchopper 4 desc"
+ I41_idea_5_1:0 "Taming The Forest"
+ I41_idea_5_1_desc:0 "Sapchopper 5 desc"
+ I41_idea_6_1:0 "Vice Grip Administration"
+ I41_idea_6_1_desc:0 "Sapchopper 6 desc"
+ I41_idea_7_1:0 "Victory in the Woods"
+ I41_idea_7_1_desc:0 "Sapchopper 7 desc"
+
+ I41_ideas_2:0 "Sapchopper Ideas 2"
+ I41_ideas_2_start:0 "Sapchopper Traditions 2"
+ I41_ideas_2_bonus:0 "Sapchopper Ambition 2"
+ I41_idea_1_2:0 "Rule with Fear"
+ I41_idea_1_2_desc:0 "Sapchopper 1 desc"
+ I41_idea_2_2:0 "Orcish Nation-Building"
+ I41_idea_2_2_desc:0 "Sapchopper 2 desc"
+ I41_idea_3_2:0 "Only The Strong Survive"
+ I41_idea_3_2_desc:0 "Sapchopper 3 desc"
+ I41_idea_4_2:0 "The Endless Greentide"
+ I41_idea_4_2_desc:0 "Sapchopper 4 desc"
+ I41_idea_5_2:0 "Taming The Forest"
+ I41_idea_5_2_desc:0 "Sapchopper 5 desc"
+ I41_idea_6_2:0 "Vice Grip Administration"
+ I41_idea_6_2_desc:0 "Sapchopper 6 desc"
+ I41_idea_7_2:0 "Victory in the Woods"
+ I41_idea_7_2_desc:0 "Sapchopper 7 desc"
+
+ I41_ideas_3:0 "Sapchopper Ideas 3"
+ I41_ideas_3_start:0 "Sapchopper Traditions 3"
+ I41_ideas_3_bonus:0 "Sapchopper Ambition 3"
+ I41_idea_1_3:0 "Rule with Fear"
+ I41_idea_1_3_desc:0 "Sapchopper 1 desc"
+ I41_idea_2_3:0 "Orcish Nation-Building"
+ I41_idea_2_3_desc:0 "Sapchopper 2 desc"
+ I41_idea_3_3:0 "Only The Strong Survive"
+ I41_idea_3_3_desc:0 "Sapchopper 3 desc"
+ I41_idea_4_3:0 "The Endless Greentide"
+ I41_idea_4_3_desc:0 "Sapchopper 4 desc"
+ I41_idea_5_3:0 "Taming The Forest"
+ I41_idea_5_3_desc:0 "Sapchopper 5 desc"
+ I41_idea_6_3:0 "Vice Grip Administration"
+ I41_idea_6_3_desc:0 "Sapchopper 6 desc"
+ I41_idea_7_3:0 "Victory in the Woods"
+ I41_idea_7_3_desc:0 "Sapchopper 7 desc"
+
+ I42_ideas_1:0 "Blackmoon Ideas 1"
+ I42_ideas_1_start:0 "Blackmoon Traditions 1"
+ I42_ideas_1_bonus:0 "Blackmoon Ambition 1"
+ I42_idea_1_1:0 "Magical Tribe"
+ I42_idea_1_1_desc:0 "Blackmoon 1 desc"
+ I42_idea_2_1:0 "Orcish Nation-Building"
+ I42_idea_2_1_desc:0 "Blackmoon 2 desc"
+ I42_idea_3_1:0 "Only The Strong Survive"
+ I42_idea_3_1_desc:0 "Blackmoon 3 desc"
+ I42_idea_4_1:0 "The Endless Greentide"
+ I42_idea_4_1_desc:0 "Blackmoon 4 desc"
+ I42_idea_5_1:0 "Taming The Forest"
+ I42_idea_5_1_desc:0 "Blackmoon 5 desc"
+ I42_idea_6_1:0 "Vice Grip Administration"
+ I42_idea_6_1_desc:0 "Blackmoon 6 desc"
+ I42_idea_7_1:0 "Victory in the Woods"
+ I42_idea_7_1_desc:0 "Blackmoon 7 desc"
+
+ I42_ideas_2:0 "Blackmoon Ideas 2"
+ I42_ideas_2_start:0 "Blackmoon Traditions 2"
+ I42_ideas_2_bonus:0 "Blackmoon Ambition 2"
+ I42_idea_1_2:0 "Magical Tribe"
+ I42_idea_1_2_desc:0 "Blackmoon 1 desc"
+ I42_idea_2_2:0 "Orcish Nation-Building"
+ I42_idea_2_2_desc:0 "Blackmoon 2 desc"
+ I42_idea_3_2:0 "Only The Strong Survive"
+ I42_idea_3_2_desc:0 "Blackmoon 3 desc"
+ I42_idea_4_2:0 "The Endless Greentide"
+ I42_idea_4_2_desc:0 "Blackmoon 4 desc"
+ I42_idea_5_2:0 "Taming The Forest"
+ I42_idea_5_2_desc:0 "Blackmoon 5 desc"
+ I42_idea_6_2:0 "Vice Grip Administration"
+ I42_idea_6_2_desc:0 "Blackmoon 6 desc"
+ I42_idea_7_2:0 "Victory in the Woods"
+ I42_idea_7_2_desc:0 "Blackmoon 7 desc"
+
+ I42_ideas_3:0 "Blackmoon Ideas 3"
+ I42_ideas_3_start:0 "Blackmoon Traditions 3"
+ I42_ideas_3_bonus:0 "Blackmoon Ambition 3"
+ I42_idea_1_3:0 "Magical Tribe"
+ I42_idea_1_3_desc:0 "Blackmoon 1 desc"
+ I42_idea_2_3:0 "Orcish Nation-Building"
+ I42_idea_2_3_desc:0 "Blackmoon 2 desc"
+ I42_idea_3_3:0 "Only The Strong Survive"
+ I42_idea_3_3_desc:0 "Blackmoon 3 desc"
+ I42_idea_4_3:0 "The Endless Greentide"
+ I42_idea_4_3_desc:0 "Blackmoon 4 desc"
+ I42_idea_5_3:0 "Taming The Forest"
+ I42_idea_5_3_desc:0 "Blackmoon 5 desc"
+ I42_idea_6_3:0 "Vice Grip Administration"
+ I42_idea_6_3_desc:0 "Blackmoon 6 desc"
+ I42_idea_7_3:0 "Victory in the Woods"
+ I42_idea_7_3_desc:0 "Blackmoon 7 desc"
+
+ I43_ideas_1:0 "Silentblade Ideas 1"
+ I43_ideas_1_start:0 "Silentblade Traditions 1"
+ I43_ideas_1_bonus:0 "Silentblade Ambition 1"
+ I43_idea_1_1:0 "Dishonourable Strike"
+ I43_idea_1_1_desc:0 "Silentblade 1 desc"
+ I43_idea_2_1:0 "Orcish Nation-Building"
+ I43_idea_2_1_desc:0 "Silentblade 2 desc"
+ I43_idea_3_1:0 "Only The Strong Survive"
+ I43_idea_3_1_desc:0 "Silentblade 3 desc"
+ I43_idea_4_1:0 "The Endless Greentide"
+ I43_idea_4_1_desc:0 "Silentblade 4 desc"
+ I43_idea_5_1:0 "Taming The Forest"
+ I43_idea_5_1_desc:0 "Silentblade 5 desc"
+ I43_idea_6_1:0 "Vice Grip Administration"
+ I43_idea_6_1_desc:0 "Silentblade 6 desc"
+ I43_idea_7_1:0 "Victory in the Woods"
+ I43_idea_7_1_desc:0 "Silentblade 7 desc"
+
+ I43_ideas_2:0 "Silentblade Ideas 2"
+ I43_ideas_2_start:0 "Silentblade Traditions 2"
+ I43_ideas_2_bonus:0 "Silentblade Ambition 2"
+ I43_idea_1_2:0 "Dishonourable Strike"
+ I43_idea_1_2_desc:0 "Silentblade 1 desc"
+ I43_idea_2_2:0 "Orcish Nation-Building"
+ I43_idea_2_2_desc:0 "Silentblade 2 desc"
+ I43_idea_3_2:0 "Only The Strong Survive"
+ I43_idea_3_2_desc:0 "Silentblade 3 desc"
+ I43_idea_4_2:0 "The Endless Greentide"
+ I43_idea_4_2_desc:0 "Silentblade 4 desc"
+ I43_idea_5_2:0 "Taming The Forest"
+ I43_idea_5_2_desc:0 "Silentblade 5 desc"
+ I43_idea_6_2:0 "Vice Grip Administration"
+ I43_idea_6_2_desc:0 "Silentblade 6 desc"
+ I43_idea_7_2:0 "Victory in the Woods"
+ I43_idea_7_2_desc:0 "Silentblade 7 desc"
+
+ I43_ideas_3:0 "Silentblade Ideas 3"
+ I43_ideas_3_start:0 "Silentblade Traditions 3"
+ I43_ideas_3_bonus:0 "Silentblade Ambition 3"
+ I43_idea_1_3:0 "Dishonourable Strike"
+ I43_idea_1_3_desc:0 "Silentblade 1 desc"
+ I43_idea_2_3:0 "Orcish Nation-Building"
+ I43_idea_2_3_desc:0 "Silentblade 2 desc"
+ I43_idea_3_3:0 "Only The Strong Survive"
+ I43_idea_3_3_desc:0 "Silentblade 3 desc"
+ I43_idea_4_3:0 "The Endless Greentide"
+ I43_idea_4_3_desc:0 "Silentblade 4 desc"
+ I43_idea_5_3:0 "Taming The Forest"
+ I43_idea_5_3_desc:0 "Silentblade 5 desc"
+ I43_idea_6_3:0 "Vice Grip Administration"
+ I43_idea_6_3_desc:0 "Silentblade 6 desc"
+ I43_idea_7_3:0 "Victory in the Woods"
+ I43_idea_7_3_desc:0 "Silentblade 7 desc"
+
+ I44_ideas_1:0 "Silvertusk Ideas 1"
+ I44_ideas_1_start:0 "Silvertusk Traditions 1"
+ I44_ideas_1_bonus:0 "Silvertusk Ambition 1"
+ I44_idea_1_1:0 "Fey Silver"
+ I44_idea_1_1_desc:0 "Silvertusk 1 desc"
+ I44_idea_2_1:0 "Orcish Nation-Building"
+ I44_idea_2_1_desc:0 "Silvertusk 2 desc"
+ I44_idea_3_1:0 "Only The Strong Survive"
+ I44_idea_3_1_desc:0 "Silvertusk 3 desc"
+ I44_idea_4_1:0 "The Endless Greentide"
+ I44_idea_4_1_desc:0 "Silvertusk 4 desc"
+ I44_idea_5_1:0 "Taming The Forest"
+ I44_idea_5_1_desc:0 "Silvertusk 5 desc"
+ I44_idea_6_1:0 "Vice Grip Administration"
+ I44_idea_6_1_desc:0 "Silvertusk 6 desc"
+ I44_idea_7_1:0 "Victory in the Woods"
+ I44_idea_7_1_desc:0 "Silvertusk 7 desc"
+
+ I44_ideas_2:0 "Silvertusk Ideas 2"
+ I44_ideas_2_start:0 "Silvertusk Traditions 2"
+ I44_ideas_2_bonus:0 "Silvertusk Ambition 2"
+ I44_idea_1_2:0 "Fey Silver"
+ I44_idea_1_2_desc:0 "Silvertusk 1 desc"
+ I44_idea_2_2:0 "Orcish Nation-Building"
+ I44_idea_2_2_desc:0 "Silvertusk 2 desc"
+ I44_idea_3_2:0 "Only The Strong Survive"
+ I44_idea_3_2_desc:0 "Silvertusk 3 desc"
+ I44_idea_4_2:0 "The Endless Greentide"
+ I44_idea_4_2_desc:0 "Silvertusk 4 desc"
+ I44_idea_5_2:0 "Taming The Forest"
+ I44_idea_5_2_desc:0 "Silvertusk 5 desc"
+ I44_idea_6_2:0 "Vice Grip Administration"
+ I44_idea_6_2_desc:0 "Silvertusk 6 desc"
+ I44_idea_7_2:0 "Victory in the Woods"
+ I44_idea_7_2_desc:0 "Silvertusk 7 desc"
+
+ I44_ideas_3:0 "Silvertusk Ideas 3"
+ I44_ideas_3_start:0 "Silvertusk Traditions 3"
+ I44_ideas_3_bonus:0 "Silvertusk Ambition 3"
+ I44_idea_1_3:0 "Fey Silver"
+ I44_idea_1_3_desc:0 "Silvertusk 1 desc"
+ I44_idea_2_3:0 "Orcish Nation-Building"
+ I44_idea_2_3_desc:0 "Silvertusk 2 desc"
+ I44_idea_3_3:0 "Only The Strong Survive"
+ I44_idea_3_3_desc:0 "Silvertusk 3 desc"
+ I44_idea_4_3:0 "The Endless Greentide"
+ I44_idea_4_3_desc:0 "Silvertusk 4 desc"
+ I44_idea_5_3:0 "Taming The Forest"
+ I44_idea_5_3_desc:0 "Silvertusk 5 desc"
+ I44_idea_6_3:0 "Vice Grip Administration"
+ I44_idea_6_3_desc:0 "Silvertusk 6 desc"
+ I44_idea_7_3:0 "Victory in the Woods"
+ I44_idea_7_3_desc:0 "Silvertusk 7 desc"
+
+ I39_ideas_1:0 "Blightseed Ideas 1"
+ I39_ideas_1_start:0 "Blightseed Traditions 1"
+ I39_ideas_1_bonus:0 "Blightseed Ambition 1"
+ I39_idea_1_1:0 "Praying Away Defeat"
+ I39_idea_1_1_desc:0 "Blightseed 1 desc"
+ I39_idea_2_1:0 "Orcish Nation-Building"
+ I39_idea_2_1_desc:0 "Blightseed 2 desc"
+ I39_idea_3_1:0 "Only The Strong Survive"
+ I39_idea_3_1_desc:0 "Blightseed 3 desc"
+ I39_idea_4_1:0 "The Endless Greentide"
+ I39_idea_4_1_desc:0 "Blightseed 4 desc"
+ I39_idea_5_1:0 "Taming The Forest"
+ I39_idea_5_1_desc:0 "Blightseed 5 desc"
+ I39_idea_6_1:0 "Vice Grip Administration"
+ I39_idea_6_1_desc:0 "Blightseed 6 desc"
+ I39_idea_7_1:0 "Victory in the Woods"
+ I39_idea_7_1_desc:0 "Blightseed 7 desc"
+
+ I39_ideas_2:0 "Blightseed Ideas 2"
+ I39_ideas_2_start:0 "Blightseed Traditions 2"
+ I39_ideas_2_bonus:0 "Blightseed Ambition 2"
+ I39_idea_1_2:0 "Praying Away Defeat"
+ I39_idea_1_2_desc:0 "Blightseed 1 desc"
+ I39_idea_2_2:0 "Orcish Nation-Building"
+ I39_idea_2_2_desc:0 "Blightseed 2 desc"
+ I39_idea_3_2:0 "Only The Strong Survive"
+ I39_idea_3_2_desc:0 "Blightseed 3 desc"
+ I39_idea_4_2:0 "The Endless Greentide"
+ I39_idea_4_2_desc:0 "Blightseed 4 desc"
+ I39_idea_5_2:0 "Taming The Forest"
+ I39_idea_5_2_desc:0 "Blightseed 5 desc"
+ I39_idea_6_2:0 "Vice Grip Administration"
+ I39_idea_6_2_desc:0 "Blightseed 6 desc"
+ I39_idea_7_2:0 "Victory in the Woods"
+ I39_idea_7_2_desc:0 "Blightseed 7 desc"
+
+ I39_ideas_3:0 "Blightseed Ideas 3"
+ I39_ideas_3_start:0 "Blightseed Traditions 3"
+ I39_ideas_3_bonus:0 "Blightseed Ambition 3"
+ I39_idea_1_3:0 "Praying Away Defeat"
+ I39_idea_1_3_desc:0 "Blightseed 1 desc"
+ I39_idea_2_3:0 "Orcish Nation-Building"
+ I39_idea_2_3_desc:0 "Blightseed 2 desc"
+ I39_idea_3_3:0 "Only The Strong Survive"
+ I39_idea_3_3_desc:0 "Blightseed 3 desc"
+ I39_idea_4_3:0 "The Endless Greentide"
+ I39_idea_4_3_desc:0 "Blightseed 4 desc"
+ I39_idea_5_3:0 "Taming The Forest"
+ I39_idea_5_3_desc:0 "Blightseed 5 desc"
+ I39_idea_6_3:0 "Vice Grip Administration"
+ I39_idea_6_3_desc:0 "Blightseed 6 desc"
+ I39_idea_7_3:0 "Victory in the Woods"
+ I39_idea_7_3_desc:0 "Blightseed 7 desc"
+
+ I38_ideas_1:0 "Beasteater Ideas 1"
+ I38_ideas_1_start:0 "Beasteater Traditions 1"
+ I38_ideas_1_bonus:0 "Beasteater Ambition 1"
+ I38_idea_1_1:0 "Praying Away Defeat"
+ I38_idea_1_1_desc:0 "Beasteater 1 desc"
+ I38_idea_2_1:0 "Orcish Nation-Building"
+ I38_idea_2_1_desc:0 "Beasteater 2 desc"
+ I38_idea_3_1:0 "Only The Strong Survive"
+ I38_idea_3_1_desc:0 "Beasteater 3 desc"
+ I38_idea_4_1:0 "The Endless Greentide"
+ I38_idea_4_1_desc:0 "Beasteater 4 desc"
+ I38_idea_5_1:0 "Taming The Forest"
+ I38_idea_5_1_desc:0 "Beasteater 5 desc"
+ I38_idea_6_1:0 "Vice Grip Administration"
+ I38_idea_6_1_desc:0 "Beasteater 6 desc"
+ I38_idea_7_1:0 "Victory in the Woods"
+ I38_idea_7_1_desc:0 "Beasteater 7 desc"
+
+ I38_ideas_2:0 "Beasteater Ideas 2"
+ I38_ideas_2_start:0 "Beasteater Traditions 2"
+ I38_ideas_2_bonus:0 "Beasteater Ambition 2"
+ I38_idea_1_2:0 "Praying Away Defeat"
+ I38_idea_1_2_desc:0 "Beasteater 1 desc"
+ I38_idea_2_2:0 "Orcish Nation-Building"
+ I38_idea_2_2_desc:0 "Beasteater 2 desc"
+ I38_idea_3_2:0 "Only The Strong Survive"
+ I38_idea_3_2_desc:0 "Beasteater 3 desc"
+ I38_idea_4_2:0 "The Endless Greentide"
+ I38_idea_4_2_desc:0 "Beasteater 4 desc"
+ I38_idea_5_2:0 "Taming The Forest"
+ I38_idea_5_2_desc:0 "Beasteater 5 desc"
+ I38_idea_6_2:0 "Vice Grip Administration"
+ I38_idea_6_2_desc:0 "Beasteater 6 desc"
+ I38_idea_7_2:0 "Victory in the Woods"
+ I38_idea_7_2_desc:0 "Beasteater 7 desc"
+
+ I38_ideas_3:0 "Beasteater Ideas 3"
+ I38_ideas_3_start:0 "Beasteater Traditions 3"
+ I38_ideas_3_bonus:0 "Beasteater Ambition 3"
+ I38_idea_1_3:0 "Praying Away Defeat"
+ I38_idea_1_3_desc:0 "Beasteater 1 desc"
+ I38_idea_2_3:0 "Orcish Nation-Building"
+ I38_idea_2_3_desc:0 "Beasteater 2 desc"
+ I38_idea_3_3:0 "Only The Strong Survive"
+ I38_idea_3_3_desc:0 "Beasteater 3 desc"
+ I38_idea_4_3:0 "The Endless Greentide"
+ I38_idea_4_3_desc:0 "Beasteater 4 desc"
+ I38_idea_5_3:0 "Taming The Forest"
+ I38_idea_5_3_desc:0 "Beasteater 5 desc"
+ I38_idea_6_3:0 "Vice Grip Administration"
+ I38_idea_6_3_desc:0 "Beasteater 6 desc"
+ I38_idea_7_3:0 "Victory in the Woods"
+ I38_idea_7_3_desc:0 "Beasteater 7 desc"
+
+ I46_ideas_2:0 "Tugund Darakh Ideas 2"
+ I46_ideas_2_start:0 "Tugund Darakh Traditions 2"
+ I46_ideas_2_bonus:0 "Tugund Darakh Ambition 2"
+ I46_idea_1_2:0 "Wrath of Ashentree"
+ I46_idea_1_2_desc:0 "Tugund Darakh 1 desc"
+ I46_idea_2_2:0 "Orcish Nation-Building"
+ I46_idea_2_2_desc:0 "Tugund Darakh 2 desc"
+ I46_idea_3_2:0 "Fanatics to the Queen"
+ I46_idea_3_2_desc:0 "Tugund Darakh 3 desc"
+ I46_idea_4_2:0 "The Endless Greentide"
+ I46_idea_4_2_desc:0 "Tugund Darakh 4 desc"
+ I46_idea_5_2:0 "Greatest slaves"
+ I46_idea_5_2_desc:0 "Tugund Darakh 5 desc"
+ I46_idea_6_2:0 "Vice Grip Administration"
+ I46_idea_6_2_desc:0 "Tugund Darakh 6 desc"
+ I46_idea_7_2:0 "For power? Everything"
+ I46_idea_7_2_desc:0 "Tugund Darakh 7 desc"
+
+ I46_ideas_3:0 "Tugund Darakh Ideas 3"
+ I46_ideas_3_start:0 "Tugund Darakh Traditions 3"
+ I46_ideas_3_bonus:0 "Tugund Darakh Ambition 3"
+ I46_idea_1_3:0 "Wrath of Ashentree"
+ I46_idea_1_3_desc:0 "Tugund Darakh 1 desc"
+ I46_idea_2_3:0 "Orcish Nation-Building"
+ I46_idea_2_3_desc:0 "Tugund Darakh 2 desc"
+ I46_idea_3_3:0 "Fanatics to the Queen"
+ I46_idea_3_3_desc:0 "Tugund Darakh 3 desc"
+ I46_idea_4_3:0 "The Endless Greentide"
+ I46_idea_4_3_desc:0 "Tugund Darakh 4 desc"
+ I46_idea_5_3:0 "Greatest slaves"
+ I46_idea_5_3_desc:0 "Tugund Darakh 5 desc"
+ I46_idea_6_3:0 "Vice Grip Administration"
+ I46_idea_6_3_desc:0 "Tugund Darakh 6 desc"
+ I46_idea_7_3:0 "For power? Everything"
+ I46_idea_7_3_desc:0 "Tugund Darakh 7 desc"
+
+ Z54_ideas_2:0 "Karakhanbar Ideas 2"
+ Z54_ideas_2_start:0 "Karakhanbar Traditions 2"
+ Z54_ideas_2_bonus:0 "Karakhanbar Ambition 2"
+ Z54_idea_1_2:0 "Black Hearth"
+ Z54_idea_1_2_desc:0 "Karakhanbar 1 desc"
+ Z54_idea_2_2:0 "Orcish Nation-Building"
+ Z54_idea_2_2_desc:0 "Karakhanbar 2 desc"
+ Z54_idea_3_2:0 "Blackwood shamans"
+ Z54_idea_3_2_desc:0 "Karakhanbar 3 desc"
+ Z54_idea_4_2:0 "The Endless Greentide"
+ Z54_idea_4_2_desc:0 "Karakhanbar 4 desc"
+ Z54_idea_5_2:0 "Cut the woods down"
+ Z54_idea_5_2_desc:0 "Karakhanbar 5 desc"
+ Z54_idea_6_2:0 "Vice Grip Administration"
+ Z54_idea_6_2_desc:0 "Karakhanbar 6 desc"
+ Z54_idea_7_2:0 "Deepwoods wood manufactories"
+ Z54_idea_7_2_desc:0 "Karakhanbar 7 desc"
+
+ Z54_ideas_3:0 "Karakhanbar Ideas 3"
+ Z54_ideas_3_start:0 "Karakhanbar Traditions 3"
+ Z54_ideas_3_bonus:0 "Karakhanbar Ambition 3"
+ Z54_idea_1_3:0 "Black Hearth"
+ Z54_idea_1_3_desc:0 "Karakhanbar 1 desc"
+ Z54_idea_2_3:0 "Orcish Nation-Building"
+ Z54_idea_2_3_desc:0 "Karakhanbar 2 desc"
+ Z54_idea_3_3:0 "Blackwood shamans"
+ Z54_idea_3_3_desc:0 "Karakhanbar 3 desc"
+ Z54_idea_4_3:0 "The Endless Greentide"
+ Z54_idea_4_3_desc:0 "Karakhanbar 4 desc"
+ Z54_idea_5_3:0 "Cut the woods down"
+ Z54_idea_5_3_desc:0 "Karakhanbar 5 desc"
+ Z54_idea_6_3:0 "Vice Grip Administration"
+ Z54_idea_6_3_desc:0 "Karakhanbar 6 desc"
+ Z54_idea_7_3:0 "Deepwoods wood manufactories"
+ Z54_idea_7_3_desc:0 "Karakhanbar 7 desc"
