gnoll ideas local +bugfix

--- a/localisation/cot_nation_ideas_l_english.yml
+++ b/localisation/cot_nation_ideas_l_english.yml
@@ -5687,3 +5687,95 @@
  Z54_idea_6_3_desc:0 "Karakhanbar 6 desc"
  Z54_idea_7_3:0 "Deepwoods wood manufactories"
  Z54_idea_7_3_desc:0 "Karakhanbar 7 desc"
+
+ W00_ideas:0 "Kyrzzaar Ideas 1"
+ W00_ideas_start:0 "Kyrzzaar Traditions 3"
+ W00_ideas_bonus:0 "Kyrzzaar Ambition 3"
+ W00_idea_1:0 "Hellfire Magic"
+ W00_idea_1_desc:0 "Kyrzzaar 1 desc"
+ W00_idea_2:0 "Natural Predators"
+ W00_idea_2_desc:0 "Kyrzzaar 2 desc"
+ W00_idea_3:0 "Altars to the Flame"
+ W00_idea_3_desc:0 "Kyrzzaar 3 desc"
+ W00_idea_4:0 "Fate-forged"
+ W00_idea_4_desc:0 "Kyrzzaar 4 desc"
+ W00_idea_5:0 "Feast on the Chattle"
+ W00_idea_5_desc:0 "Kyrzzaar 5 desc"
+ W00_idea_6:0 "Slavers and Makers"
+ W00_idea_6_desc:0 "Kyrzzaar 6 desc"
+ W00_idea_7:0 "Burn The World"
+ W00_idea_7_desc:0 "Kyrzzaar 7 desc"
+
+ W00_ideas_2:0 "Kyrzzaar Ideas 2"
+ W00_ideas_2_start:0 "Kyrzzaar Traditions 3"
+ W00_ideas_2_bonus:0 "Kyrzzaar Ambition 3"
+ W00_idea_1_2:0 "Hellfire Magic"
+ W00_idea_1_2_desc:0 "Kyrzzaar 1 desc"
+ W00_idea_2_2:0 "Natural Predators"
+ W00_idea_2_2_desc:0 "Kyrzzaar 2 desc"
+ W00_idea_3_2:0 "Altars to the Flame"
+ W00_idea_3_2_desc:0 "Kyrzzaar 3 desc"
+ W00_idea_4_2:0 "Fate-forged"
+ W00_idea_4_2_desc:0 "Kyrzzaar 4 desc"
+ W00_idea_5_2:0 "Feast on the Chattle"
+ W00_idea_5_2_desc:0 "Kyrzzaar 5 desc"
+ W00_idea_6_2:0 "Slavers and Makers"
+ W00_idea_6_2_desc:0 "Kyrzzaar 6 desc"
+ W00_idea_7_2:0 "Burn The World"
+ W00_idea_7_2_desc:0 "Kyrzzaar 7 desc"
+
+ W00_ideas_3:0 "Kyrzzaar Ideas 3"
+ W00_ideas_3_start:0 "Kyrzzaar Traditions 3"
+ W00_ideas_3_bonus:0 "Kyrzzaar Ambition 3"
+ W00_idea_1_3:0 "Hellfire Magic"
+ W00_idea_1_3_desc:0 "Kyrzzaar 1 desc"
+ W00_idea_2_3:0 "Natural Predators"
+ W00_idea_2_3_desc:0 "Kyrzzaar 2 desc"
+ W00_idea_3_3:0 "Altars to the Flame"
+ W00_idea_3_3_desc:0 "Kyrzzaar 3 desc"
+ W00_idea_4_3:0 "Fate-forged"
+ W00_idea_4_3_desc:0 "Kyrzzaar 4 desc"
+ W00_idea_5_3:0 "Feast on the Chattle"
+ W00_idea_5_3_desc:0 "Kyrzzaar 5 desc"
+ W00_idea_6_3:0 "Slavers and Makers"
+ W00_idea_6_3_desc:0 "Kyrzzaar 6 desc"
+ W00_idea_7_3:0 "Burn The World"
+ W00_idea_7_3_desc:0 "Kyrzzaar 7 desc"
+
+ #Honderaak
+ B67_ideas_3:0 "Honderaak Ideas"
+ B67_ideas_3_start:0 "Honderaak Traditions"
+ B67_ideas_3_bonus:0 "Honderaak Ambition"
+ B67_dogs_war_3:0 "Dogs of War"
+ B67_dogs_war_3_desc:0 "As we arrived in Anbennar, there were many detriments to our reputation. Gnolls are not well-liked or well trusted here, and we have to work hard to improve our standing. However, one aspect of our reputation has been very valuable: we are known far and wide as unrelenting and resilient warriors. As such, mercenaries from Honderaak have had a very easy time finding well-paid work. Eager to get in on this lucrative business, many more Dovesworn Gnolls have started work as sellswords as either their primary occupation, or just on the side to make some extra crowns."
+ B67_two_faced_3:0 "Two-Faced Diplomacy"
+ B67_two_faced_3_desc:0 "The Dovesworn Gnolls tip-toe a fine balance of maintaining a reputation between bloodthirstiness and civilised demeanour. To gain acceptance within the Empire of Anbennar we have had to change the way we dress, the way we talk, the way we act, all to prove ourselves just as civilised as the next race. But we have also found that if we go too far in this, we would be seen as servile and would soon lose our state. We must never forget what made gnolls the bane of Castanor, and use our ancient infamy to open doors - as first, mercenaries, and then, friends. The torch on our coat of arms might be the light that guides gnollkind to civilization, yet it also holds in memory the threat of the fires that our ancestors have set as they raided and pillaged these lands, and what we would do to ensure our survival."
+ B67_copper_hills_3:0 "War of the Copper Hills"
+ B67_copper_hills_3_desc:0 "The war in which Busilar drove us from the Khenak Range is a bitter memory to us. We lost our homeland, and though we did not give it up without a long and bitter fight, in the end we were overcome, and forced to find a new life in Anbennar. But now, we must look to the future. We are a new people, with a new homeland, and these bitter memories contain valuable lessons. We must remember our origins, learn from our mistakes, and improve upon our strengths, in order for this homeland to be a permanent one."
+ B67_neo_gnollish_3:0 "Neo-Gnollish Architecture"
+ B67_neo_gnollish_3_desc:0 "As the waves of gnollish refugees arrived in Anbennar after the War of the Copper Hills, we were forced to take a pragmatic approach to everything, from religion to local customs. This was also the case when it came to building our new homes, as we had to provide all of them with roof and hearth in a very short period of time. Our stonemasons and carpenters have developed a very scrappy type of architecture, as they have become very adept at knowing what corners can be cut without the house falling down."
+ B67_cantons_3:0 "Cantons"
+ B67_cantons_3_desc:0 "The clan structures of our Hillthrone ancestors always kept power decentralized, allowing for a degree of freedom and self-determination by tradition and convention. As we adapt to the Anbennarian ways around us, however, we find it is increasingly necessary to ground these traditions in law. Because of this we have created small administrative divisions called cantons, which are governed by a combination of hereditary clan leadership as well as representatives chosen by its inhabitants."
+ B67_trash_treasure_3:0 "One Man's Trash, Another Gnoll's Treasure"
+ B67_trash_treasure_3_desc:0 "Honderaak has not been among the wealthier parts of the Empire of Anbennar, and our people have often had to make do with very little to endure their hardships. This has, however, made us very resourceful. The average Dovesworn Gnoll can look at any odd pile of what is supposed to be garbage, and immediately pick out anything and everything of value. As such, our merchants have become very good at picking out goods that are undervalued or even disposed of, in order to sell them where they are needed for significant profit margins."
+ B67_scrap_gun_3:0 "Akcykx Scrap Gun"
+ B67_scrap_gun_3_desc:0 "In the late 19th century, a Dovesworn Gnoll weaponsmith and artificer by the name of Argex Akcykx invented the not very creatively named Akcykx Scrap Gun. This weapon is unique in that instead of shooting conventional bullets, it is able to convert almost anything, from metal scraps to coins, into deadly projectiles.\n\nWhile not accurate or precise by any stretch of the imagination, it gets the job done, leaving brutal lacerations on its victims, and thanks to its cheap maintenance and versatility, it become widely used by people all around the globe, with name Akcykx being inexorably tied to revolution and mercenaries in equal measure."
+
+#xanzerbexis
+ A49_ideas_3:0 "Hillthrone Ideas"
+ A49_ideas_3_start:0 "Hillthrone Traditions"
+ A49_ideas_3_bonus:0 "Hillthrone Ambition"
+ A49_queen_of_the_hill_3:0 "Queen of the Hill"
+ A49_queen_of_the_hill_3_desc:0 "Ever since the conquest of Gnollish Businor, first at the hands of the Sorcerer-King, and later by the accursed Jaher and his elven legions, our once proud people have been sidelined and persecuted in our own land, forced to live in the highest peaks of the Khenak split into innumerable petty packs all across these mountains.\n\nSuch has been our situation for four hundred years until, capitalising on the ongoing Lilac Wars which kept Verne and Busilar busy in their own conflicts, a visionary leader arose: Xanzerbexis, the matriarch of a minor pack who began a brutal campaign of conquest and subjugation across the Khenak. By 1441, all 86 packs of the Hillthrone gnolls had been subdued and united under her leadership, through war, diplomacy and marriage, thus becoming the first undisputed Queen-of-the-Hill in recent history. Whilst her enemies accuse her of having sold her firstborn to demons in exchange for power, these claims only exacerbate her already fearsome reputation, for she would stop at nothing to keep her people free from human domination."
+ A49_the_ivemkverag_3:0 "The Ivemkverag"
+ A49_the_ivemkverag_3_desc:0 "Centuries of life in the resource-poor Khenak Range pushed many Hill Gnolls to adopt mercenary work from the Border princes, eventually forming into packs of sellswords. These motley bands became known as the Ivemkverag, or "Dyed Thieves": a class of rich and influential soldiers of fortune, with the habit of dying their fur or turning the pilfered banners of their defeated foes into wearable trophies. By the first Lilac War, their adoption of human influences led to wildly diverse bands - from the Tellumite Pink Barkers to skull-faced Dead Dogs out of Bisan.\n\nHired for years at a time, their services were invaluable to the feuding Princes as fast shock troops, fearsome in night combat. To the Hill Queens, their experience made them the backbone of armies, swift to attack and strong in defense. Unlike disorganized levied hordes, the Ivemkveragi had the armor and discipline for long battles. Their riches and martial strength made them both vital and vexing to the Queens of the Hill."
+ A49_wealth_of_the_wingwyrms_3:0 "Wealth of the Wingwyrms"
+ A49_wealth_of_the_wingwyrms_3_desc:0 "Gnolls not drawn to mercenary work often pursued hunting, particularly of the once plentiful venomous wyverns inhabiting the Khenak mountains. Originally spurred by relentless demand for wyvern toxin from human alchemists, the gnoll hunter packs developed creative uses for every part of the wyvern. Wyvern leather was fashioned into cloaks, nets, and drum skins. Hollow bones became climbing axes or intricately carved flutes and pipes, and harder bones were repurposed as spears or knives. Bone utensils would include intricate carvings, while wyvern leather would be scorched with designs of xhazobs or ivemkveragi victories. One lost tribe was notable for their primitive smoke bombs, which combined fat, charcoal, and toxins, popular both with hunters and mercenaries. Regrettably, these tactics and overhunting played a major role in the disappearance of the Khenak wyverns."
+ A49_brainmarrow_pact_3:0 "The Brainmarrow Pact"
+ A49_brainmarrow_pact_3_desc:0 "At the beginning of the 16th century it was apparent the technological gap between the Hillthrone gnolls and their human rivals had become too significant to ignore. To fix this, the seventh Queen-of-the-Hill, Zabrixa instituted the Brainmarrow Pact, demanding Hillthrone mercenaries working abroad to bring a piece of knowledge or technology every five years.\n\nThe plan saw great success, most likely because should they fail to meet that quota the mercenary's family would be executed, and whilst it didn't prevent the ultimate downfall of the Hillthrone Gnolls decades later, it did bring them closer to Cannorian culture and ideas."
+ A49_a_tack_in_businors_boot_3:0 "A Tack in Businor's Boot"
+ A49_a_tack_in_businors_boot_3_desc:0 "Once rulers of Businor; the Hill Throne gnolls knew secret pathways between coastal Busilar, Verne and Sugamber and used them constantly to raid and smuggle undetected. During times of conflict, the Hill Queens adopted a policy of funding poorer gnoll bands, encouraging them to loot the Businorian countryside and spread terror. This served a dual purpose: exacting petty revenge on the human populace, and weakening the Busilari in hopes of reclaiming their former lands. As bands only attacked soft targets like villages and convoys, Busilari retaliation was typically slow and tepid.\n\nHowever, some disobedient bands exploited the routes for smuggling, growing rich through moving contraband. Ironically, the War of the Copper Hills which toppled the Hillthrone queens was not caused by the raids, but the smuggling, which had crossed the bottom line of the merchants and nobility of Busilar."
+ A49_hillthrone_has_eyes_3:0 "The Hillthrone Has Eyes"
+ A49_hillthrone_has_eyes_3_desc:0 "Before Xanzerbexis's brutal conquest of the 86 gnoll packs of the Khenak Range, constant squabbling plagued the Hill Gnolls. To ensure order and obedience, Xanzerbexis and her successors each took hostages from every pack upon their rise to power. This was formalized by the 5th Queen-of-the-Hill, Egzeth, who mandated clans send young pups to her personal enforcers, the Vrestukex, or "Hill's Eyes."\n\nHostages from the same pack were never trained together, curbing tribal loyalties. Recruits were also conditioned to be loyal. Obedience was rewarded with better housing, equipment, and luxuries, while failure led to demotion, punishment, or starvation. When using the Vrestukex to oppress disloyal clans, the Queens made sure they were never used against their former packmates, to avoid potential conflicts of loyalty.\n\nIn later years, the Vrestukex acted as a counter to the influential Ivemkveragi, whose wealth and power became a threat to the rule of Queens-of-the-Hill."
+ A49_inquisitive_of_all_kults_3:0 "Inquisitive of All Kults"
+ A49_inquisitive_of_all_kults_3_desc:0 "Over time, Xhazobkult worship in the Khenak Range diverged from its Bulwari and Sarhaly roots, blending animism and parts of the local Cannorian faiths. For example, the Hill Gnolls sacrificed possessions such as animals, food, or jewelry instead of captives, as the Hill Gnolls believed that sacrificing treasured belongings was more meaningful than sacrificing cheap lives. Hill Gnoll sellswords and smugglers also converted to Regent Court worship to conduct business unbothered. However, as the Khenak Xhazobkult further adopted the practices of the Cannor Kults, more gnolls adopted the Cannorian faiths, especially the Ivemkveragi.\n\nThe ascension of Corin further increased the spread of converts: some Hill Gnolls viewed her as a human Xhazobine, empowered as she was as an avatar of Agrados. During the Crimson Deluge, many gnolls joined the widespread Corinite conversions, though they were more enthusiastic about waging justified war than its doctrine of banishing evil. This syncretism and conversions fostered a greater tolerance of the Hill Gnolls outside the Khenak Range, leading to decreased hostility from the Cannorians over time."
